app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pharmacy-center
  labels:
    app.kubernetes.io/name: pharmacy-center
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pharmacy-center
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pharmacy-center
    spec:
      containers:
        - name: pharmacy-center
          image: docker.io/vfarcic/silly-demo:1.0.13
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
