app/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: pharmacy-center
  labels:
    app.kubernetes.io/name: pharmacy-center
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: pharmacy-center
