app/ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pharmacy-center
  labels:
    app.kubernetes.io/name: pharmacy-center
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: pharmacy-center
                port:
                  number: 8080
      host: pharmacycenter.io
  tls:
    - hosts:
        - pharmacycenter.io
      secretName: pharmacy-center
